--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-select": "^4.2.1",
     "styled-components": "^5.2.1"
   }
 }
