--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.0.1",
-    "gatsby-background-image": "^1.4.1",
+    "gatsby-background-image": "^1.5.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-react-svg": "^3.0.0",
@@ -26,6 +26,8 @@
     "gatsby-plugin-styled-components": "^4.0.0",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
+    "gbimage-bridge": "^0.1.1",
+    "intersection-observer": "^0.12.0",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
