--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^3.0.1",
     "gatsby-background-image": "^1.5.0",
     "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-manifest": "^3.2.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
