--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-is": "^17.0.2",
     "react-select": "^4.2.1",
     "styled-components": "^5.2.1"
   }
